fix(Modal): api alignment (#2440)
- **Question for review:** Should `Modal.Close` be a compound component?
🤔
- Fixes #2063
- Fixes #1177

---------

--- a/apps/theme/components/TokenModal/TokenModal.module.css
+++ b/apps/theme/components/TokenModal/TokenModal.module.css
@@ -22,10 +22,6 @@
   padding-right: 0;
 }
 
-.modalContent {
-  padding-bottom: 24px;
-}
-
 .tabs {
   margin-bottom: 16px;
 }
@@ -34,7 +30,7 @@
   margin-bottom: 16px;
 }
 
-.modalHeader h2 {
+.modalHeader {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -53,11 +49,6 @@
 .shareBtn {
   margin-right: 8px;
   font-weight: 500;
-}
-
-.modalHeader > button {
-  right: 22px;
-  top: 22px;
 }
 
 .hiddenGlobalBtn {
